<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReleaseActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/activityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/activity_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/asterisk"
        app:layout_constraintEnd_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="@id/activityTitle"/>

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/required_hint"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/activityTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_time"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle"/>

    <TextView
        android:id="@+id/tvSelectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:textSize="18sp"
        android:padding="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="@id/activityTime"
        app:layout_constraintBottom_toBottomOf="@id/activityTime" />

    <ImageView
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/asterisk"
        app:layout_constraintEnd_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="@id/activityTime"/>

    <TextView
        android:id="@+id/activityLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/activity_location"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activityTime"/>

    <ImageView
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/asterisk"
        app:layout_constraintEnd_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="@id/activityLocation"/>

    <RadioGroup
        android:id="@+id/radioGroupLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activityTime">

        <RadioButton
            android:id="@+id/radioButtonLocation1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campus_north"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/radioButtonLocation2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/campus_minhang"
            android:textSize="18sp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/activityType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/activity_type"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activityLocation"/>

    <ImageView
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/asterisk"
        app:layout_constraintEnd_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="@id/activityType"/>

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupLocation" />

    <TextView
        android:id="@+id/activityDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/activity_description"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activityType"/>

    <ImageView
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/asterisk"
        app:layout_constraintEnd_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="@id/activityDescription"/>

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/required_hint"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerType" />

    <TextView
        android:id="@+id/activityPoster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_poster"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription"/>

    <include
        android:id="@+id/includedLayout"
        layout="@layout/image_item"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/activityPoster"/>

<!--    活动相关图片-->
    <TextView
        android:id="@+id/activityPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/related_images"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activityPoster"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/activityPicture"
        app:spanCount="3" />

    <!-- 发布按钮 -->
    <Button
        android:id="@+id/btnPublish"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/publish_button"
        android:onClick="onReleaseButtonClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
